--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
         <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
         <script src="https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js"></script>
+        <script src="https://unpkg.com/react-redux@5.0.6/dist/react-redux.min.js"></script>
 
         <style>
             .loader {
@@ -312,18 +313,18 @@
         class Todos extends React.Component {
             addItem = e => {
                     e.preventDefault();
-                    this.props.store.dispatch(handleAddTodo(
+                    this.props.dispatch(handleAddTodo(
                         this.input.value,
                         () => this.input.value = ''
                     ))
                 }
             removeItem= todo => {
                 const { store } = this.props;
-                store.dispatch(handleDeleteTodo(todo))
-
+                this.props.dispatch(handleDeleteTodo(todo))
+                console.log("Todo Deleted.")
             }
             toggleItem= item => {
-                this.props.store.dispatch(handleToggleTodo(item))
+                this.props.dispatch(handleToggleTodo(item))
             }
             render() {
                 return(
@@ -343,17 +344,37 @@
 
             }
         }
+
+        // class ConnectedTodos extends React.Component {
+        //     render() {
+        //         return(
+        //             <Context.Consumer>
+        //                 {
+        //                     store => {
+        //                         const { todos } = store.getState();
+        //                         return <Todos todos={todos} dispatch={store.dispatch} />
+        //                     }
+        //                 }
+        //             </Context.Consumer>
+        //         )
+        //     }
+        // }
+
+        const ConnectedTodos = ReactRedux.connect((state) => ({
+            todos: state.todos
+        }))(Todos)
+
         class Goals extends React.Component {
             addItem = e => {
                 e.preventDefault();
-                this.props.store.dispatch(handleAddGoal(
+                this.props.dispatch(handleAddGoal(
                     this.input.value,
                     () => this.input.value = ''
                 ))
             }
 
             removeItem= goal => {
-                this.props.store.dispatch(handleDeleteGoal(goal))
+                this.props.dispatch(handleDeleteGoal(goal))
             }
             render() {
                 return(
@@ -374,53 +395,107 @@
             }
         }
 
+        // class ConnectedGoals extends React.Component {
+        //     render() {
+        //         return (
+        //                 <Context.Consumer>
+        //                 {store => {
+        //                     const {goals} = store.getState();
+        //                     return <Goals goals={goals} dispatch={store.dispatch} />
+        //                 }}
+        //                 </Context.Consumer>
+
+        //         )
+        //     }
+        // }
+
+        const ConnectedGoals = ReactRedux.connect((state) => ({
+            goals: state.goals
+        }))(Goals)
+
             class App extends React.Component {
 
                 componentDidMount() {
-                    const { subscribe, dispatch } = this.props.store;
-                    subscribe(()=> this.forceUpdate())
+                    const { dispatch } = this.props;
                     dispatch(handleReceivingData())
                 }
 
                 render() {
-                    const { store } = this.props;
-                    const { todos, goals, loading } = store.getState();
-                    if(loading) 
+                    if(this.props.loading) 
                         return <div className="loader"></div>
                     return(<React.Fragment>
-                            <Todos todos={todos} store= {this.props.store}/>
-                            <Goals goals={goals} store={this.props.store}/>
+                            <ConnectedTodos/>
+                            <ConnectedGoals/>
                         </React.Fragment>)
                 }
             }
 
-            class ConnectedApp extends Redux.Component {
-                render() {
-                    return(
-                        <Context.Consumer>
-                            {store => (
-                                <App store={store} />
-                            )}  
-                        </Context.Consumer>
+            // class ConnectedApp extends React.Component {
+            //     render() {
+            //         return(
+            //             <Context.Consumer>
+            //                 {(store) => <App store={store} />}  
+            //             </Context.Consumer>
+            //                 )
+            //             }
+            // }
 
-                    )
-                }
-            }
-            const Context = Redux.createContext();
-            class Provider extends Redux.Component {
-                render() {
-                    return(
-                        <Context.Provider value={this.props.store}>
-                            {this.props.children}
-                        </Context.Provider>
-                    )
-                }
-            }
+            // function connect(mapStateToProps) {
+            //     return Component => {
+            //         class Receiver extends React.Component{
+            //             componentDidMount() {
+            //                 const { subscribe } = this.props.store;
+            //                 const unsubscribe = subscribe(() => {
+            //                     this.forceUpdate()
+            //                 })
+            //             }
+            //             componentWillUnmount() {
+            //                 this.unsubscribe();
+            //             }
+                        
+            //             render() {
+            //                 const { dispatch, getState } = this.props.store;
+            //                 const state = getState();
+            //                 const stateNeeded = mapStateToProps(state);
+
+            //                 return <Component {...stateNeeded} dispatch={dispatch} />
+            //             }
+            //         }
+
+            //         class ConnectedComponent extends React.Component {
+            //             render() {
+            //                 return(
+            //                     <Context.Consumer>
+            //                         {store => <Receiver store={store} />}
+            //                     </Context.Consumer>
+            //                 )
+            //             }
+            //         }
+
+            //         return ConnectedComponent;
+            //     }
+            // }
+
+            const ConnectedApp = ReactRedux.connect((state) => ({
+                loading: state.loading
+            }))(App)
+
+
+            // class Provider extends React.Component {
+            //     render() {
+            //         return(
+            //             <Context.Provider value={this.props.store}>
+            //                 {this.props.children}
+            //             </Context.Provider>
+            //         )
+            //     }
+            // }
 
             ReactDOM.render(
-                <Provider store={store} >
-                    <App/>
-                </Provider>,
+                <ReactRedux.Provider store={store}>
+                    <ConnectedApp />
+                </ReactRedux.Provider>
+                ,
                 document.getElementById('root')
             )
         </script>
